src/test/ui/feature-gates/feature-gate-no-debug-2.stderr
error: use of deprecated attribute `no_debug`: the `#[no_debug]` attribute was an experimental feature that has been deprecated due to lack of demand. See https://github.com/rust-lang/rust/issues/29721
  --> $DIR/feature-gate-no-debug-2.rs:4:1
   |
LL | #[no_debug]
   | ^^^^^^^^^^^ help: remove this attribute
   |
note: lint level defined here
  --> $DIR/feature-gate-no-debug-2.rs:1:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: aborting due to previous error

